recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:2: error: not found: value setposdef
	setposdef carre{
        ^FourSquare:9: error: not found: value carre
	carre()
        ^FourSquare:11: error: not found: value carre
	carre()
        ^FourSquare:13: error: not found: value carre
	carre()
        ^FourSquare:15: error: not found: value carre
	carre()
        ^