recursion.lessons.recursion.square.FourSquare.scala.code
override def run() {
	setposdef carre{
for (x<-1 to 4)
{
	avance(100)
	gauche(90)
}
	}
	carre()
	setPos(200,300)
	carre()
	setPos(100,300)
	carre()
	setPos(100,100)
	carre()
}
